--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://lucenix.github.io/lucenix.github.io"  ,
+  "homepage": "http://lucenix.github.io"  ,
   "name": "personal-portfolio",
   "version": "0.1.0",
   "private": true,
